--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,7 +241,6 @@ jobs:
         working-directory: services/${{ matrix.service }}
         args: --timeout=5m --out-format=github-actions
         only-new-issues: false
-
   # Job 5: Seguridad y vulnerabilidades
   security-scan:
     name: 🔒 Security Scan
@@ -249,24 +248,71 @@ jobs:
     needs: [detect-changes]
     if: needs.detect-changes.outputs.services == 'true'
     
+    strategy:
+      matrix:
+        service: [user-service, resource-service, booking-service, notification-service]
+      fail-fast: false
+    
     steps:
     - name: 📥 Checkout código
       uses: actions/checkout@v4
       
+    - name: 🔍 Verificar si el servicio cambió
+      id: should-run
+      run: |
+        if [ "${{ needs.detect-changes.outputs[matrix.service] }}" == "true" ] || [ "${{ github.event_name }}" == "push" ]; then
+          echo "run=true" >> $GITHUB_OUTPUT
+        else
+          echo "run=false" >> $GITHUB_OUTPUT
+        fi
+      
     - name: 🐹 Configurar Go
+      if: steps.should-run.outputs.run == 'true'
       uses: actions/setup-go@v4
       with:
         go-version: ${{ env.GO_VERSION }}
         
+    - name: 📦 Instalar gosec
+      if: steps.should-run.outputs.run == 'true'
+      run: |
+        go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+        
     - name: 🔍 Ejecutar Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
-      with:
-        args: '-fmt sarif -out gosec.sarif ./...'
+      if: steps.should-run.outputs.run == 'true'
+      working-directory: ./services/${{ matrix.service }}
+      run: |
+        echo "🔍 Ejecutando gosec en ${{ matrix.service }}..."
+        gosec -fmt sarif -out gosec-${{ matrix.service }}.sarif ./...
+        echo "✅ Gosec completado para ${{ matrix.service }}"
         
     - name: 📊 Upload SARIF file
+      if: steps.should-run.outputs.run == 'true'
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: gosec.sarif
+        sarif_file: ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif
+        category: gosec-${{ matrix.service }}
+          - name: 🔍 Ejecutar go mod audit (vulnerabilidades en dependencias)
+      if: steps.should-run.outputs.run == 'true'
+      working-directory: ./services/${{ matrix.service }}
+      run: |
+        echo "🔍 Verificando vulnerabilidades en dependencias de ${{ matrix.service }}..."
+        # Usar go mod audit si está disponible, sino skip
+        if command -v nancy &> /dev/null; then
+          go list -json -deps ./... | nancy sleuth
+        else
+          echo "⚠️ Nancy no está disponible, saltando verificación de dependencias"
+        fi
+      continue-on-error: true # No fallar el build por vulnerabilidades menores
+      
+    - name: 📊 Instalar y ejecutar govulncheck
+      if: steps.should-run.outputs.run == 'true'
+      working-directory: ./services/${{ matrix.service }}
+      run: |
+        echo "🔍 Instalando govulncheck..."
+        go install golang.org/x/vuln/cmd/govulncheck@latest
+        echo "🔍 Ejecutando govulncheck en ${{ matrix.service }}..."
+        govulncheck ./...
+      continue-on-error: true
 
   # Job 6: Verificación de estructura del proyecto
   project-structure:
