--- a/services/notification-service/Dockerfile
+++ b/services/notification-service/Dockerfile
@@ -15,7 +15,7 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
 # Final stage
-FROM alpine:latest
+FROM alpine:3.19
 
 # Install ca-certificates for HTTPS requests
 RUN apk --no-cache add ca-certificates
