--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -272,38 +272,25 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
         
-    - name: 📦 Instalar gosec
-      if: steps.should-run.outputs.run == 'true'
-      run: |
-        go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
-        
     - name: 🔍 Ejecutar Gosec Security Scanner
       if: steps.should-run.outputs.run == 'true'
-      working-directory: ./services/${{ matrix.service }}
-      run: |
-        echo "🔍 Ejecutando gosec en ${{ matrix.service }}..."
-        gosec -fmt sarif -out gosec-${{ matrix.service }}.sarif ./...
-        echo "✅ Gosec completado para ${{ matrix.service }}"
+      uses: securecodewarrior/github-action-gosec@v1
+      with:
+        # 'version' aquí especifica qué VERSIÓN de la herramienta 'gosec' (de securego/gosec)
+        # quieres que la acción de Secure Code Warrior instale y use.
+        version: v2.20.0 # Revisa https://github.com/securego/gosec/releases para la última estable
+        # 'go-path' o 'scan-path' le dice a la ACCIÓN dónde encontrar el código Go a escanear.
+        go-path: ./services/${{ matrix.service }}
+        # 'flags' son los argumentos que la acción pasará directamente a la herramienta gosec.
+        flags: '-fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
+
         
     - name: 📊 Upload SARIF file
       if: steps.should-run.outputs.run == 'true'
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif
         category: gosec-${{ matrix.service }}
-        
-    - name: 🔍 Ejecutar go mod audit (vulnerabilidades en dependencias)
-      if: steps.should-run.outputs.run == 'true'
-      working-directory: ./services/${{ matrix.service }}
-      run: |
-        echo "🔍 Verificando vulnerabilidades en dependencias de ${{ matrix.service }}..."
-        # Usar go mod audit si está disponible, sino skip
-        if command -v nancy &> /dev/null; then
-          go list -json -deps ./... | nancy sleuth
-        else
-          echo "⚠️ Nancy no está disponible, saltando verificación de dependencias"
-        fi
-      continue-on-error: true # No fallar el build por vulnerabilidades menores
       
     - name: 📊 Instalar y ejecutar govulncheck
       if: steps.should-run.outputs.run == 'true'
