--- a/kubernetes/booking-service.yaml
+++ b/kubernetes/booking-service.yaml
@@ -1,3 +1,5 @@
+---
+# filepath: c:\Users\EnriA\Desktop\Programación\BOOTCAMP_CLOUD\MODULO 2\ENTREGABLE\SISTEMA_RESERVAS\kubernetes\booking-service.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,41 +16,41 @@ spec:
         app: booking-service
     spec:
       containers:
-      - name: booking-service
-        image: booking-service:latest
-        ports:
-        - containerPort: 8083
-        env:
-        - name: PORT
-          value: "8083"
-        - name: USER_SERVICE_URL
-          value: "http://user-service:8081"
-        - name: RESOURCE_SERVICE_URL
-          value: "http://resource-service:8082"
-        - name: NOTIFICATION_SERVICE_URL
-          value: "http://notification-service:8084"
-        envFrom:
-        - configMapRef:
-            name: app-config
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "200m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8083
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8083
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - name: booking-service
+          image: booking-service:latest
+          ports:
+            - containerPort: 8083
+          env:
+            - name: PORT
+              value: "8083"
+            - name: USER_SERVICE_URL
+              value: "http://user-service:8081"
+            - name: RESOURCE_SERVICE_URL
+              value: "http://resource-service:8082"
+            - name: NOTIFICATION_SERVICE_URL
+              value: "http://notification-service:8084"
+          envFrom:
+            - configMapRef:
+                name: app-config
+      resources:
+        requests:
+          memory: "128Mi"
+          cpu: "100m"
+        limits:
+          memory: "256Mi"
+          cpu: "200m"
+      livenessProbe:
+        httpGet:
+          path: /health
+          port: 8083
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      readinessProbe:
+        httpGet:
+          path: /health
+          port: 8083
+        initialDelaySeconds: 5
+        periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -59,6 +61,6 @@ spec:
   selector:
     app: booking-service
   ports:
-  - port: 8083
-    targetPort: 8083
+    - port: 8083
+      targetPort: 8083
   type: ClusterIP
