fix: update Gosec security scanner to use securego/gosec@master and adjust working directory and parameters

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,23 +276,22 @@ jobs:
         
     - name: 🔍 Ejecutar Gosec Security Scanner
       if: steps.should-run.outputs.run == 'true'
-      # CAMBIO CLAVE AQUÍ: Usar securego/gosec-action
-      uses: securego/gosec-action@v2 # Usar la versión recomendada (v2 es la actual estable)
+      uses: securego/gosec@master
+      # ¡IMPORTANTE! Cambia el directorio de trabajo para este paso.
+      # Esto hace que Gosec se ejecute DENTRO de la carpeta del servicio.
+      working-directory: ./services/${{ matrix.service }}
       with:
-        # El parámetro para la ruta de tu código Go es 'path'
-        path: ./services/${{ matrix.service }}
-        # 'flags' son los argumentos que la acción pasará directamente a la herramienta gosec.
-        # No necesitas especificar 'go-path' o 'scan-path' aquí, la acción lo maneja.
-        # El archivo SARIF se generará dentro de la carpeta especificada por 'path'.
-        flags: '-fmt sarif -out gosec-${{ matrix.service }}.sarif' 
-        # La acción 'securego/gosec-action' ya instala la herramienta gosec,
-        # así que no necesitas un parámetro 'version' para la herramienta gosec aquí.
-        
+        version: v2.20.0
+        # go-path ahora es '.' porque ya estamos en el directorio del servicio
+        go-path: .
+        # El archivo de salida ahora se creará en el directorio de trabajo (./services/el-servicio/)
+        flags: '-fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
+
     - name: 📊 Upload SARIF file
       if: steps.should-run.outputs.run == 'true'
       uses: github/codeql-action/upload-sarif@v3
       with:
-        # La ruta del archivo SARIF debe ser relativa al workspace, incluyendo la carpeta del servicio.
+        # La ruta de sarif_file ahora es correcta porque Gosec lo puso ahí
         sarif_file: ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif
         category: gosec-${{ matrix.service }}
       
