--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -280,13 +280,13 @@ jobs:
       with:
         version: v2.20.0
         go-path: ./services/${{ matrix.service }}
-        flags: '-fmt sarif -out ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif ./...'
+        flags: '-fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
 
     - name: 📊 Upload SARIF file
       if: steps.should-run.outputs.run == 'true'
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif
+        sarif_file: ./gosec-${{ matrix.service }}.sarif
         category: gosec-${{ matrix.service }}
       
     - name: 📊 Instalar y ejecutar govulncheck
