--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,12 +279,11 @@ jobs:
       uses: securego/gosec@master
       with:
         version: v2.20.0
-        go-path: ./services/${{ matrix.service }}
-        flags: '-fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
+        flags: '-no-fail -fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
 
     - name: 📊 Upload SARIF file
       if: steps.should-run.outputs.run == 'true'
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: ./gosec-${{ matrix.service }}.sarif
         category: gosec-${{ matrix.service }}
