--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -278,24 +278,13 @@ jobs:
       if: steps.should-run.outputs.run == 'true'
       uses: securego/gosec@master
       with:
-        args: '-no-fail -fmt sarif -out gosec-${{ matrix.service }}.sarif ./...'
-
-
-    - name: 🕵️‍♀️ Debug-> Listar archivos SARIF generados (SIEMPRE EJECUTAR ESTO PARA DEPURAR)
-      if: steps.should-run.outputs.run == 'true'
-      run: |
-        echo "Buscando archivos SARIF en todo el repositorio:"
-        find . -name "*.sarif"
-        echo "Contenido del directorio raíz:"
-        ls -la .
-        echo "Contenido del directorio del servicio:"
-        ls -la ./services/${{ matrix.service }}
+        args: '-no-fail -fmt sarif -out ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif ./...'
 
     - name: 📊 Upload SARIF file
       if: steps.should-run.outputs.run == 'true'
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: gosec-${{ matrix.service }}.sarif
+        sarif_file: ./services/${{ matrix.service }}/gosec-${{ matrix.service }}.sarif
         category: gosec-${{ matrix.service }}
       
     - name: 📊 Instalar y ejecutar govulncheck
